--- a/css/style.css
+++ b/css/style.css
@@ -396,4 +396,118 @@ body {
   width: 100vw;
   height: 10%;
   background-color: #1EAAAA;
+}
+
+#goods-top {
+  width: 100vw;
+  height: 50vh;
+  background-color: #F6F5AE;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#goods-top .goods-top-heading {
+  width: 50%;
+  height: 40%;
+  background-color: #fdfdfd;
+  opacity: 70%;
+  border-radius: 10px;
+  text-align: center;
+}
+#goods-top .goods-top-heading h1 {
+  font-family: "fot-tsukuardgothic-std", sans-serif;
+  font-size: 3em;
+}
+#goods-top .goods-top-heading h2 {
+  font-family: "fot-tsukuardgothic-std", sans-serif;
+}
+
+#goods-main {
+  width: 100vw;
+  height: 460vh;
+}
+#goods-main .goods-main-game {
+  width: 100%;
+  height: 20%;
+  background-color: #A5EF83;
+  position: relative;
+}
+#goods-main .goods-main-game::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 40px 100vw 0 0;
+  border-color: transparent #C2A3F5 transparent transparent;
+}
+#goods-main .goods-main-robot {
+  width: 100%;
+  height: 20%;
+  background-color: #C2A3F5;
+  position: relative;
+}
+#goods-main .goods-main-robot::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 40px 100vw 0 0;
+  border-color: transparent #F58983 transparent transparent;
+}
+#goods-main .goods-main-analog {
+  width: 100%;
+  height: 20%;
+  background-color: #F58983;
+  position: relative;
+}
+#goods-main .goods-main-analog::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 40px 100vw 0 0;
+  border-color: transparent #76A0F4 transparent transparent;
+}
+#goods-main .goods-main-thinking {
+  width: 100%;
+  height: 20%;
+  background-color: #76A0F4;
+  position: relative;
+}
+#goods-main .goods-main-thinking::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 40px 100vw 0 0;
+  border-color: transparent #F9B668 transparent transparent;
+}
+#goods-main .goods-main-tv {
+  width: 100%;
+  height: 20%;
+  background-color: #F9B668;
+  position: relative;
+}
+#goods-main .goods-main-tv::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 40px 100vw 0 0;
+  border-color: transparent #fdfdfd transparent transparent;
 }/*# sourceMappingURL=style.css.map */
