--- a/scss/_ability.scss
+++ b/scss/_ability.scss
@@ -2,6 +2,7 @@ $margin-center: 0 auto;
 $font-Tks: "fot-tsukuardgothic-std", sans-serif;
 $color-W: #fdfdfd;
 $color-B: #4B4237;
+$color-EG: #A2C3AB;
 $borderR-img: 5px;
 
 #ability-top {
@@ -35,7 +36,71 @@ $borderR-img: 5px;
     width: 100vw;
     height: 110vh;
     background-color: #FFF7E8;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
     position: relative;
+
+    .ability-contents-0 {
+        width: 80%;
+        height: 40%;
+        position: relative;
+
+        .ability-contents-main {
+            width: 100%;
+            height: 100%;
+            display: flex;
+        align-items: center;
+        justify-content: space-between;
+        position: absolute;
+    
+            .ability-contents-text {
+                width: 50%;
+                height: 100%;
+    
+                h1 {
+                    font-family: $font-Tks;
+                    font-size: 4em;
+                    color: $color-B;
+                }
+    
+                p {
+                    font-family: $font-Tks;
+                    font-size: 2em;
+                    color: $color-B;
+                }
+            }
+    
+            img {
+                width: 40%;
+                height: auto;
+            }
+        }
+    }
+
+
+    .ability-contents-btn {
+        width: 80%;
+        height: 24%;
+        margin-bottom: 5%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .ability-contents-btn-D {
+            width: 20%;
+            height: 100%;
+            background-color: $color-EG;
+
+            h2 {
+                font-family: $font-Tks;
+                color: $color-B;
+                font-size: 2em;
+            }
+        }
+    }
+
 }
 
 #ability-contents::before {
@@ -140,5 +205,149 @@ $borderR-img: 5px;
         width: 100vw;
         height: 10%;
         background-color: $color-G;
+    }
+}
+
+.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.invisible {
+    opacity: 0;
+    visibility: hidden;
+}
+
+@media screen and (max-width:600px){
+    .parent-footer {
+        width: 100vw;
+        height: 64vh;
+    
+        .parent-footer-1 {
+            width: 100%;
+            height: 90%;
+            padding: 5% 0;
+            justify-content: space-between;
+    
+            img {
+                width: 30%;
+                height: auto;
+            }
+    
+            .footer-btn-1 {
+                width: 74%;
+                height: 60%;
+                display: flex;
+                align-items: center;
+                flex-direction: column;;
+                justify-content: space-around;
+    
+                .footer-btn-ability {
+                    width: 100%;
+                    height: 45%;
+                    background-color: #C4E6FD;
+                    border-radius: 10px;
+                    margin-bottom: 20%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-direction: column;
+    
+                    .footer-ability-img {
+                        width: 100%;
+                        height: 50%;
+                        position: relative;
+    
+                        .footer-ability-img-1 {
+                            width: 25%;
+                            height: auto;
+                            position: absolute;
+                            top: -60%;
+                            left: 25%;
+                        }
+    
+                        .footer-ability-img-2 {
+                            width: 30%;
+                            height: auto;
+                            position: absolute;
+                            top: -80%;
+                            right: 25%;
+                        }
+                    }
+    
+                    a {
+                        font-family: $font-Tks;
+                        font-weight: bold;
+                        font-size: 1em;
+                        text-decoration: none;
+                        color: $color-B;
+                    }
+                }
+    
+                .footer-btn-goods {
+                    width: 100%;
+                    height: 45%;
+                    background-color: #D2F8D1;
+                    border-radius: 10px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-direction: column;
+    
+                    .footer-goods-img {
+                        width: 100%;
+                        height: 50%;
+                        position: relative;
+    
+                        .footer-goods-img-1 {
+                            width: 40%;
+                            top: -60%;
+                            left: 30%;
+                        }
+    
+                        .footer-goods-img-2 {
+                            width: 30%;
+                            top: 5%;
+                            left: 5%;
+                        }
+    
+                        .footer-goods-img-3 {
+                            width: 30%;
+                            top: 10%;
+                            right: 3%;
+                        }
+                    }
+    
+                    a {
+                        font-size: 1em;
+                    }
+                }
+            }
+    
+            .footer-btn-2 {
+                width: 74%;
+                height: 11%;
+    
+                .footer-btn-child {
+                    width: 100%;
+                    height: 100%;
+                    background-color: #F6F1C2;
+                    border-radius: 10px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+    
+                    a {
+                        font-size: 1em;
+                    }
+                }
+            }
+        }
+    
+        .parent-footer-2 {
+            width: 100vw;
+            height: 10%;
+            background-color: $color-G;
+        }
     }
 }
